<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="vertical"
        android:weightSum="15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/b17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3498DB"
            android:onClick="b17run"
            android:text="@string/american_dollar"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#25CCF7"
            android:onClick="b18run"
            android:text="@string/uk_pound"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3498DB"
            android:onClick="b19run"
            android:text="@string/australian_dollar"
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/b20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#25CCF7"
            android:onClick="b20run"
            android:text="@string/france_euro"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3498DB"
            android:onClick="b21run"
            android:text="@string/netherland_euro"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#25CCF7"
            android:onClick="b22run"
            android:text="@string/canada_dollar"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3498DB"
            android:onClick="b23run"
            android:text="@string/singapur_dollar"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#25CCF7"
            android:onClick="b24run"
            android:text="@string/indian_rupee"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3498DB"
            android:onClick="b25run"
            android:text="@string/switzerland_franc"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#25CCF7"
            android:onClick="b26run"
            android:text="@string/japan_yen"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3498DB"
            android:onClick="b27run"
            android:text="@string/china_yuan"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#25CCF7"
            android:onClick="b28run"
            android:text="@string/germany_euro"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3498DB"
            android:onClick="b30run"
            android:text="@string/hongkong_dollar"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#25CCF7"
            android:onClick="b29run"
            android:text="@string/swedan_krona"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3498DB"
            android:onClick="b31run"
            android:text="@string/mexico_peso"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#25CCF7"
            android:onClick="b32run"
            android:text="@string/unitedarabemirates_dirham"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#30336B"


        android:text="@string/convert_into"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>