<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b3run"
            android:text="@string/australian_dollar"
            android:textAllCaps="false"
            android:textSize="18sp"

            tools:ignore="OnClick" />


        <Button
            android:id="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b1run"
            android:text="@string/american_dollar"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b2run"
            android:text="@string/uk_pound"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <Button
            android:id="@+id/b4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b4run"
            android:text="@string/france_euro"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b5run"
            android:text="@string/netherland_euro"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b6run"
            android:text="@string/canada_dollar"
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="281dp"
            tools:layout_editor_absoluteY="243dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="2dp">

        <Button
            android:id="@+id/b7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b7run"
            android:text="@string/singapur_dollar"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b8run"
            android:text="@string/indian_rupee"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b9run"
            android:text="@string/switzerland_franc"
            android:textAllCaps="false"
            android:textSize="18sp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/t1"
        app:layout_constraintVertical_bias="0.388"
        tools:layout_editor_absoluteX="0dp">


        <Button
            android:id="@+id/b10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b10run"
            android:text="@string/japan_yen"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b11run"
            android:text="@string/china_yuan"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b12run"
            android:text="@string/germany_euro"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
        app:layout_constraintTop_toTopOf="@+id/t1"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/b13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b13run"
            android:text="@string/swedan_krona"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b14run"
            android:text="@string/hongkong_dollar"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/circular_button"
            android:onClick="b15run"
            android:text="@string/mexico_peso"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/b16"
        android:layout_width="164dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="284dp"
        android:layout_weight="1"
        android:background="@drawable/circular_button"
        android:onClick="b16run"
        android:text="@string/unitedarabemirates_dirham"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="#30336B"
        android:text="@string/select_currency_to_be_converted"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp" />




</androidx.constraintlayout.widget.ConstraintLayout>